--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "type":"module",
   "scripts": {
-    "server":"node server.js"
+    "start":"node app.js"
   },
   "author": "",
   "license": "ISC",
