--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "app.js",
-  "type":"module",
+  "type":"commonjs",
   "scripts": {
     "start":"node app.js"
   },
